phonebook_chart/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: phonebook
spec:
  selector:
    app: phonebook
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
