phonebook_chart/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phonebook
  annotations:
    kubernetes.io/ingress.class: alb

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phonebook
                port:
                  number: 80
